--- a/taskio-app-tailwind/src/css/input.css
+++ b/taskio-app-tailwind/src/css/input.css
@@ -7,3 +7,31 @@
         @apply font-outfit;
     }
 }
+
+.nav__link {
+    @apply relative text-white font-outfit font-medium text-[18px] leading-[40px] after:absolute after:h-[1px] after:w-full after:left-0 after:-bottom-1 after:bg-white after:scale-0 hover:after:scale-100 after:transition-transform;
+}
+
+.btn {
+    @apply font-normal text-[16px] text-black bg-white rounded-[8px] cursor-pointer font-outfit hover:bg-hoverbtn transition-all;
+}
+
+.hero {
+    animation: k-bounce 2s ease-in-out infinite;
+    animation-duration: alternate;
+}
+
+@keyframes k-bounce {
+    0%,
+    20%,
+    50%,
+    100% {
+        transform: translateY(0);
+    }
+    35% {
+        transform: translateY(-15px);
+    }
+    70% {
+        transform: translateY(-5px);
+    }
+}
