--- a/taskio-app-tailwind/src/css/input.css
+++ b/taskio-app-tailwind/src/css/input.css
@@ -8,17 +8,49 @@
     }
 }
 
+.title {
+    @apply font-outfit font-bold text-[48px] text-blueviolet leading-[62px];
+}
+
+.subtitle {
+    @apply font-outfit font-normal text-[18px] text-gray;
+}
+
 .nav__link {
     @apply relative text-white font-outfit font-medium text-[18px] leading-[40px] after:absolute after:h-[1px] after:w-full after:left-0 after:-bottom-1 after:bg-white after:scale-0 hover:after:scale-100 after:transition-transform;
 }
 
 .btn {
-    @apply font-normal text-[16px] text-black bg-white rounded-[8px] cursor-pointer font-outfit hover:bg-hoverbtn transition-all;
+    @apply font-normal text-[16px] text-black bg-white rounded-[8px] cursor-pointer font-outfit hover:bg-hoverbtn transition-all text-center;
 }
 
 .hero {
     animation: k-bounce 2s ease-in-out infinite;
-    animation-duration: alternate;
+}
+
+.is-open #open-btn {
+    @apply hidden;
+}
+
+.is-open #close-btn {
+    @apply block;
+}
+
+.card {
+    @apply py-8 px-[22px] bg-white border-e7 border-[2px] rounded-[20px]  min-w-[315px] w-[315px] hover:bg-hoverbtn cursor-pointer;
+}
+
+.card--cur {
+    @apply bg-lightblue hover:bg-lightblue cursor-default;
+}
+
+.card--cur h3,
+.card--cur p {
+    @apply text-white;
+}
+
+.card--cur div button svg {
+    fill: #fff;
 }
 
 @keyframes k-bounce {
