--- a/taskio-app-tailwind/src/css/main.css
+++ b/taskio-app-tailwind/src/css/main.css
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: #e5e7eb;
+  border-color: currentColor;
   /* 2 */
 }
 
@@ -548,6 +548,10 @@ body {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -560,12 +564,24 @@ body {
   right: -0.25rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-8 {
   bottom: 2rem;
 }
 
 .bottom-\[90px\] {
   bottom: 90px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
 }
 
 .left-3 {
@@ -580,12 +596,24 @@ body {
   right: 400px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-1\/2 {
   top: 50%;
 }
 
 .top-\[73px\] {
   top: 73px;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .mx-auto {
@@ -598,12 +626,32 @@ body {
   margin-bottom: 2rem;
 }
 
+.mb-\[23px\] {
+  margin-bottom: 23px;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
 
+.mt-\[18px\] {
+  margin-top: 18px;
+}
+
+.mt-\[60px\] {
+  margin-top: 60px;
+}
+
+.mt-\[76px\] {
+  margin-top: 76px;
+}
+
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-5 {
@@ -612,6 +660,26 @@ body {
 
 .h-7 {
   height: 1.75rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
+.h-\[324px\] {
+  height: 324px;
+}
+
+.h-\[60px\] {
+  height: 60px;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-fit {
@@ -627,6 +695,22 @@ body {
   width: 1.75rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[120px\] {
+  width: 120px;
+}
+
+.w-\[122px\] {
+  width: 122px;
+}
+
+.w-\[130px\] {
+  width: 130px;
+}
+
 .w-\[140px\] {
   width: 140px;
 }
@@ -635,12 +719,20 @@ body {
   width: 180px;
 }
 
+.w-\[324px\] {
+  width: 324px;
+}
+
 .w-\[463px\] {
   width: 463px;
 }
 
-.w-\[637px\] {
-  width: 637px;
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-fit {
@@ -648,16 +740,60 @@ body {
   width: fit-content;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .max-w-\[1150px\] {
   max-width: 1150px;
+}
+
+.max-w-\[1185px\] {
+  max-width: 1185px;
+}
+
+.max-w-\[485px\] {
+  max-width: 485px;
+}
+
+.max-w-\[637px\] {
+  max-width: 637px;
+}
+
+.-translate-x-\[50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[50\%\] {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-45 {
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.resize {
+  resize: both;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -672,16 +808,49 @@ body {
   gap: 0.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-\[100px\] {
+  gap: 100px;
+}
+
+.gap-\[23px\] {
+  gap: 23px;
+}
+
 .gap-\[30px\] {
   gap: 30px;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded-\[4px\] {
+  border-radius: 4px;
 }
 
 .rounded-full {
   border-radius: 9999px;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .border-\[4px\] {
   border-width: 4px;
+}
+
+.border-t-\[2px\] {
+  border-top-width: 2px;
+}
+
+.border-\[\#E7E7E7\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(231 231 231 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -699,14 +868,29 @@ body {
   background-color: rgb(0 157 252 / var(--tw-bg-opacity));
 }
 
+.bg-lightgray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+
+.bg-sky-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(125 211 252 / var(--tw-bg-opacity));
+}
+
+.bg-sky-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-6 {
@@ -724,12 +908,33 @@ body {
   padding-bottom: 19px;
 }
 
+.py-\[50px\] {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 .pb-\[120px\] {
   padding-bottom: 120px;
 }
 
+.pb-\[160px\] {
+  padding-bottom: 160px;
+}
+
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pt-\[96px\] {
+  padding-top: 96px;
+}
+
+.pb-\[76px\] {
+  padding-bottom: 76px;
+}
+
+.font-outfit {
+  font-family: Outfit, sans-serif;
 }
 
 .text-\[16px\] {
@@ -740,12 +945,24 @@ body {
   font-size: 18px;
 }
 
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
+}
+
 .text-\[52px\] {
   font-size: 52px;
 }
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .font-normal {
@@ -756,17 +973,67 @@ body {
   line-height: 1.75rem;
 }
 
+.leading-8 {
+  line-height: 2rem;
+}
+
 .leading-\[25px\] {
   line-height: 25px;
+}
+
+.leading-\[30px\] {
+  line-height: 30px;
 }
 
 .leading-\[72px\] {
   line-height: 72px;
 }
 
+.text-\[\#2E3234\] {
+  --tw-text-opacity: 1;
+  color: rgb(46 50 52 / var(--tw-text-opacity));
+}
+
+.text-\[\#333333\] {
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+
+.text-\[\#7D7D7D\] {
+  --tw-text-opacity: 1;
+  color: rgb(125 125 125 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-75 {
+  opacity: 0.75;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.title {
+  font-family: Outfit, sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 62px;
+  --tw-text-opacity: 1;
+  color: rgb(10 10 74 / var(--tw-text-opacity));
+}
+
+.subtitle {
+  font-family: Outfit, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(144 144 144 / var(--tw-text-opacity));
 }
 
 .nav__link {
@@ -808,6 +1075,7 @@ body {
   border-radius: 8px;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  text-align: center;
   font-family: Outfit, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -825,7 +1093,56 @@ body {
 
 .hero {
   animation: k-bounce 2s ease-in-out infinite;
-  animation-duration: alternate;
+}
+
+.is-open #open-btn {
+  display: none;
+}
+
+.is-open #close-btn {
+  display: block;
+}
+
+.card {
+  width: 315px;
+  min-width: 315px;
+  cursor: pointer;
+  border-radius: 20px;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(231 231 231 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
+.card:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 234 234 / var(--tw-bg-opacity));
+}
+
+.card--cur {
+  cursor: default;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 157 252 / var(--tw-bg-opacity));
+}
+
+.card--cur:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 157 252 / var(--tw-bg-opacity));
+}
+
+.card--cur h3,
+.card--cur p {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.card--cur div button svg {
+  fill: #fff;
 }
 
 @keyframes k-bounce {
@@ -842,5 +1159,163 @@ body {
 
   70% {
     transform: translateY(-5px);
+  }
+}
+
+.active\:scale-75:active {
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:bg-slate-50:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+@media (max-width: 1200px) {
+  .md\:bottom-20 {
+    bottom: 5rem;
+  }
+
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-3 {
+    height: 0.75rem;
+  }
+
+  .md\:w-3 {
+    width: 0.75rem;
+  }
+
+  .md\:w-\[100px\] {
+    width: 100px;
+  }
+
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .md\:gap-\[48px\] {
+    gap: 48px;
+  }
+
+  .md\:gap-\[60px\] {
+    gap: 60px;
+  }
+
+  .md\:border-\[2px\] {
+    border-width: 2px;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:pb-\[25px\] {
+    padding-bottom: 25px;
+  }
+
+  .md\:pt-4 {
+    padding-top: 1rem;
+  }
+
+  .md\:text-center {
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:w-\[55px\] {
+    width: 55px;
+  }
+
+  .sm\:gap-\[18px\] {
+    gap: 18px;
+  }
+
+  .sm\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .sm\:text-\[40px\] {
+    font-size: 40px;
+  }
+
+  .sm\:leading-\[42px\] {
+    line-height: 42px;
+  }
+}
+
+@media (max-width: 480px) {
+  .xs\:h-\[250px\] {
+    height: 250px;
+  }
+
+  .xs\:w-\[114px\] {
+    width: 114px;
+  }
+
+  .xs\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .xs\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .xs\:py-\[14px\] {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+
+  .xs\:text-left {
+    text-align: left;
+  }
+
+  .xs\:text-\[14px\] {
+    font-size: 14px;
+  }
+
+  .xs\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .xs\:text-\[30px\] {
+    font-size: 30px;
   }
 }
