--- a/taskio-app-tailwind/src/css/main.css
+++ b/taskio-app-tailwind/src/css/main.css
@@ -560,12 +560,32 @@ body {
   position: relative;
 }
 
+.-bottom-\[60px\] {
+  bottom: -60px;
+}
+
+.-left-\[40px\] {
+  left: -40px;
+}
+
 .-right-1 {
   right: -0.25rem;
 }
 
+.-right-\[130px\] {
+  right: -130px;
+}
+
+.-top-\[40px\] {
+  top: -40px;
+}
+
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-14 {
+  bottom: 3.5rem;
 }
 
 .bottom-8 {
@@ -616,6 +636,10 @@ body {
   z-index: 30;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -630,8 +654,20 @@ body {
   margin-bottom: 23px;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
 }
 
 .mt-\[18px\] {
@@ -640,10 +676,6 @@ body {
 
 .mt-\[60px\] {
   margin-top: 60px;
-}
-
-.mr-auto {
-  margin-right: auto;
 }
 
 .flex {
@@ -674,6 +706,10 @@ body {
   height: 324px;
 }
 
+.h-\[490px\] {
+  height: 490px;
+}
+
 .h-\[60px\] {
   height: 60px;
 }
@@ -699,6 +735,10 @@ body {
   width: 2rem;
 }
 
+.w-\[102px\] {
+  width: 102px;
+}
+
 .w-\[120px\] {
   width: 120px;
 }
@@ -719,12 +759,20 @@ body {
   width: 180px;
 }
 
+.w-\[26px\] {
+  width: 26px;
+}
+
 .w-\[324px\] {
   width: 324px;
 }
 
 .w-\[463px\] {
   width: 463px;
+}
+
+.w-\[473px\] {
+  width: 473px;
 }
 
 .w-\[60px\] {
@@ -760,6 +808,10 @@ body {
   max-width: 485px;
 }
 
+.max-w-\[530px\] {
+  max-width: 530px;
+}
+
 .max-w-\[637px\] {
   max-width: 637px;
 }
@@ -771,6 +823,11 @@ body {
 
 .-translate-y-\[50\%\] {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[50\%\] {
+  --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -786,6 +843,10 @@ body {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .resize {
@@ -840,8 +901,28 @@ body {
   scroll-behavior: smooth;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
+.rounded-\[10px\] {
+  border-radius: 10px;
+}
+
+.rounded-\[110px\] {
+  border-radius: 110px;
+}
+
+.rounded-\[20px\] {
+  border-radius: 20px;
+}
+
 .rounded-\[4px\] {
   border-radius: 4px;
+}
+
+.rounded-\[55px\] {
+  border-radius: 55px;
 }
 
 .rounded-full {
@@ -875,6 +956,15 @@ body {
   background-color: rgb(16 36 55 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#FFFFFF33\] {
+  background-color: #FFFFFF33;
+}
+
+.bg-darkblue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 36 55 / var(--tw-bg-opacity));
+}
+
 .bg-lightblue {
   --tw-bg-opacity: 1;
   background-color: rgb(0 157 252 / var(--tw-bg-opacity));
@@ -900,9 +990,35 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[url\(\'\.\.\/\.\.\/public\/img\/bg-full\.png\'\)\] {
+  background-image: url('../../public/img/bg-full.png');
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-6 {
@@ -915,6 +1031,11 @@ body {
   padding-bottom: 13px;
 }
 
+.py-\[18px\] {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
 .py-\[19px\] {
   padding-top: 19px;
   padding-bottom: 19px;
@@ -923,6 +1044,11 @@ body {
 .py-\[50px\] {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.py-\[54px\] {
+  padding-top: 54px;
+  padding-bottom: 54px;
 }
 
 .pb-\[120px\] {
@@ -937,12 +1063,28 @@ body {
   padding-bottom: 76px;
 }
 
+.pl-\[38px\] {
+  padding-left: 38px;
+}
+
+.pr-\[120px\] {
+  padding-right: 120px;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
 
 .pt-\[96px\] {
   padding-top: 96px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.font-montserrat {
+  font-family: Montserrat, sans-serif;
 }
 
 .font-outfit {
@@ -965,6 +1107,10 @@ body {
   font-size: 22px;
 }
 
+.text-\[26px\] {
+  font-size: 26px;
+}
+
 .text-\[52px\] {
   font-size: 52px;
 }
@@ -981,6 +1127,10 @@ body {
   font-weight: 400;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .leading-7 {
   line-height: 1.75rem;
 }
@@ -995,6 +1145,10 @@ body {
 
 .leading-\[30px\] {
   line-height: 30px;
+}
+
+.leading-\[32px\] {
+  line-height: 32px;
 }
 
 .leading-\[72px\] {
@@ -1016,9 +1170,18 @@ body {
   color: rgb(125 125 125 / var(--tw-text-opacity));
 }
 
+.text-\[\#FFFFFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-opacity-70 {
+  --tw-text-opacity: 0.7;
 }
 
 .opacity-75 {
@@ -1036,8 +1199,6 @@ body {
   font-size: 48px;
   font-weight: 700;
   line-height: 62px;
-  --tw-text-opacity: 1;
-  color: rgb(10 10 74 / var(--tw-text-opacity));
 }
 
 @media (max-width: 768px) {
@@ -1208,6 +1369,14 @@ body {
   display: none;
 }
 
+#tags::-webkit-scrollbar {
+  display: none;
+}
+
+#tags2::-webkit-scrollbar {
+  display: none;
+}
+
 @keyframes k-bounce {
   0%,
     20%,
@@ -1223,6 +1392,74 @@ body {
   70% {
     transform: translateY(-5px);
   }
+}
+
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:left-0::before {
+  content: var(--tw-content);
+  left: 0px;
+}
+
+.before\:top-0::before {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.before\:h-full::before {
+  content: var(--tw-content);
+  height: 100%;
+}
+
+.before\:w-\[11px\]::before {
+  content: var(--tw-content);
+  width: 11px;
+}
+
+.before\:scale-0::before {
+  content: var(--tw-content);
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:rounded-l-md::before {
+  content: var(--tw-content);
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.before\:bg-lightblue::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 157 252 / var(--tw-bg-opacity));
+}
+
+.before\:transition-all::before {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.hover\:bg-\[\#243C52\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 60 82 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-lightblue:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 157 252 / var(--tw-bg-opacity));
+}
+
+.hover\:before\:scale-100:hover::before {
+  content: var(--tw-content);
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .active\:scale-75:active {
@@ -1283,6 +1520,10 @@ body {
     gap: 1.25rem;
   }
 
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
   .md\:gap-\[30px\] {
     gap: 30px;
   }
@@ -1297,6 +1538,11 @@ body {
 
   .md\:border-\[2px\] {
     border-width: 2px;
+  }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .md\:px-6 {
@@ -1335,6 +1581,18 @@ body {
 }
 
 @media (max-width: 768px) {
+  .sm\:-bottom-\[40px\] {
+    bottom: -40px;
+  }
+
+  .sm\:-right-\[90px\] {
+    right: -90px;
+  }
+
+  .sm\:mt-\[32px\] {
+    margin-top: 32px;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -1343,8 +1601,20 @@ body {
     display: none;
   }
 
+  .sm\:h-\[280px\] {
+    height: 280px;
+  }
+
   .sm\:h-auto {
     height: auto;
+  }
+
+  .sm\:w-\[16px\] {
+    width: 16px;
+  }
+
+  .sm\:w-\[270px\] {
+    width: 270px;
   }
 
   .sm\:w-\[50px\] {
@@ -1367,9 +1637,31 @@ body {
     gap: 18px;
   }
 
+  .sm\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sm\:py-\[10px\] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .sm\:pr-0 {
+    padding-right: 0px;
+  }
+
+  .sm\:text-center {
+    text-align: center;
+  }
+
+  .sm\:text-\[10px\] {
+    font-size: 10px;
   }
 
   .sm\:text-\[40px\] {
@@ -1398,12 +1690,21 @@ body {
     margin-top: 37px;
   }
 
+  .xs\:hidden {
+    display: none;
+  }
+
   .xs\:h-\[250px\] {
     height: 250px;
   }
 
   .xs\:h-\[46px\] {
     height: 46px;
+  }
+
+  .xs\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .xs\:w-\[114px\] {
@@ -1418,6 +1719,10 @@ body {
     width: 46px;
   }
 
+  .xs\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .xs\:gap-3 {
     gap: 0.75rem;
   }
@@ -1426,13 +1731,32 @@ body {
     gap: 16px;
   }
 
+  .xs\:px-\[8px\] {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .xs\:py-\[10px\] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
   .xs\:py-\[14px\] {
     padding-top: 14px;
     padding-bottom: 14px;
   }
 
+  .xs\:py-\[46px\] {
+    padding-top: 46px;
+    padding-bottom: 46px;
+  }
+
   .xs\:text-left {
     text-align: left;
+  }
+
+  .xs\:text-\[13px\] {
+    font-size: 13px;
   }
 
   .xs\:text-\[14px\] {
@@ -1443,28 +1767,23 @@ body {
     font-size: 15px;
   }
 
-  .xs\:text-\[30px\] {
-    font-size: 30px;
-  }
-
   .xs\:text-\[16px\] {
     font-size: 16px;
   }
 
-  .xs\:text-\[10px\] {
-    font-size: 10px;
+  .xs\:text-\[18px\] {
+    font-size: 18px;
   }
 
-  .xs\:text-\[13px\] {
-    font-size: 13px;
+  .xs\:text-\[30px\] {
+    font-size: 30px;
   }
 
   .xs\:leading-6 {
     line-height: 1.5rem;
   }
 
-  .xs\:text-\[\#DADADA\] {
-    --tw-text-opacity: 1;
-    color: rgb(218 218 218 / var(--tw-text-opacity));
+  .xs\:leading-\[21px\] {
+    line-height: 21px;
   }
 }
