--- a/taskio-app-tailwind/src/css/main.css
+++ b/taskio-app-tailwind/src/css/main.css
@@ -644,6 +644,46 @@ body {
   top: 73px;
 }
 
+.right-1\/2 {
+  right: 50%;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.-left-\[900px\] {
+  left: -900px;
+}
+
+.-top-\[900px\] {
+  top: -900px;
+}
+
+.-left-\[600px\] {
+  left: -600px;
+}
+
+.-top-\[600px\] {
+  top: -600px;
+}
+
+.-top-\[700px\] {
+  top: -700px;
+}
+
+.-top-\[800px\] {
+  top: -800px;
+}
+
+.-bottom-\[800px\] {
+  bottom: -800px;
+}
+
+.-right-\[600px\] {
+  right: -600px;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -666,6 +706,10 @@ body {
   margin-bottom: 2rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mb-9 {
   margin-bottom: 2.25rem;
 }
@@ -676,6 +720,10 @@ body {
 
 .mb-\[23px\] {
   margin-bottom: 23px;
+}
+
+.mb-\[33px\] {
+  margin-bottom: 33px;
 }
 
 .mt-12 {
@@ -706,6 +754,10 @@ body {
   margin-top: 18px;
 }
 
+.mt-\[200px\] {
+  margin-top: 200px;
+}
+
 .mt-\[46px\] {
   margin-top: 46px;
 }
@@ -714,8 +766,28 @@ body {
   margin-top: 60px;
 }
 
-.mb-\[33px\] {
-  margin-bottom: 33px;
+.ml-auto {
+  margin-left: auto;
+}
+
+.mb-\[17px\] {
+  margin-bottom: 17px;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-\[40px\] {
+  margin-bottom: 40px;
+}
+
+.mb-\[30px\] {
+  margin-bottom: 30px;
+}
+
+.ml-0 {
+  margin-left: 0px;
 }
 
 .block {
@@ -744,6 +816,10 @@ body {
 
 .h-\[120px\] {
   height: 120px;
+}
+
+.h-\[14px\] {
+  height: 14px;
 }
 
 .h-\[1px\] {
@@ -781,6 +857,18 @@ body {
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
 }
 
 .max-h-\[42px\] {
@@ -847,10 +935,6 @@ body {
   width: 473px;
 }
 
-.w-\[570px\] {
-  width: 570px;
-}
-
 .w-\[60px\] {
   width: 60px;
 }
@@ -872,6 +956,22 @@ body {
   width: 100%;
 }
 
+.w-\[170px\] {
+  width: 170px;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-\[1140px\] {
+  width: 1140px;
+}
+
 .max-w-\[1150px\] {
   max-width: 1150px;
 }
@@ -884,12 +984,28 @@ body {
   max-width: 1200px;
 }
 
+.max-w-\[180px\] {
+  max-width: 180px;
+}
+
+.max-w-\[325px\] {
+  max-width: 325px;
+}
+
+.max-w-\[350px\] {
+  max-width: 350px;
+}
+
 .max-w-\[485px\] {
   max-width: 485px;
 }
 
 .max-w-\[530px\] {
   max-width: 530px;
+}
+
+.max-w-\[570px\] {
+  max-width: 570px;
 }
 
 .max-w-\[637px\] {
@@ -900,8 +1016,8 @@ body {
   max-width: 750px;
 }
 
-.max-w-\[180px\] {
-  max-width: 180px;
+.max-w-\[1140px\] {
+  max-width: 1140px;
 }
 
 .-translate-x-\[50\%\] {
@@ -916,6 +1032,11 @@ body {
 
 .translate-x-\[50\%\] {
   --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[50\%\] {
+  --tw-translate-y: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1025,8 +1146,16 @@ body {
   border-radius: 110px;
 }
 
+.rounded-\[12px\] {
+  border-radius: 12px;
+}
+
 .rounded-\[15px\] {
   border-radius: 15px;
+}
+
+.rounded-\[180px\] {
+  border-radius: 180px;
 }
 
 .rounded-\[20px\] {
@@ -1053,8 +1182,8 @@ body {
   border-radius: 0.125rem;
 }
 
-.rounded-\[12px\] {
-  border-radius: 12px;
+.border-\[1px\] {
+  border-width: 1px;
 }
 
 .border-\[20px\] {
@@ -1128,6 +1257,14 @@ body {
   --tw-border-opacity: 0.2;
 }
 
+.border-opacity-50 {
+  --tw-border-opacity: 0.5;
+}
+
+.border-opacity-30 {
+  --tw-border-opacity: 0.3;
+}
+
 .bg-\[\#009bfc34\] {
   background-color: #009bfc34;
 }
@@ -1190,6 +1327,35 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#1565D8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 101 216 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1566d8b1\] {
+  background-color: #1566d8b1;
+}
+
+.bg-\[\#376ebb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 110 187 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#5385ca\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 133 202 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#5d99ee\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(93 153 238 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#4078d9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 120 217 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\.\/\.\.\/public\/img\/bg-full\.png\'\)\] {
   background-image: url('../../public/img/bg-full.png');
 }
@@ -1204,6 +1370,10 @@ body {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.p-\[18px\] {
+  padding: 18px;
 }
 
 .p-\[6px\] {
@@ -1227,6 +1397,11 @@ body {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .px-\[16px\] {
@@ -1257,6 +1432,11 @@ body {
 .py-\[13px\] {
   padding-top: 13px;
   padding-bottom: 13px;
+}
+
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .py-\[18px\] {
@@ -1292,6 +1472,16 @@ body {
 .py-\[95px\] {
   padding-top: 95px;
   padding-bottom: 95px;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-\[68px\] {
+  padding-top: 68px;
+  padding-bottom: 68px;
 }
 
 .pb-\[100px\] {
@@ -1330,12 +1520,24 @@ body {
   padding-top: 140px;
 }
 
+.pt-\[316px\] {
+  padding-top: 316px;
+}
+
 .pt-\[96px\] {
   padding-top: 96px;
 }
 
+.pb-\[80px\] {
+  padding-bottom: 80px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-montserrat {
@@ -1378,6 +1580,14 @@ body {
   font-size: 52px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[36px\] {
+  font-size: 36px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1392,6 +1602,14 @@ body {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-\[300\] {
+  font-weight: 300;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .leading-7 {
@@ -1428,6 +1646,14 @@ body {
 
 .leading-\[72px\] {
   line-height: 72px;
+}
+
+.leading-\[46px\] {
+  line-height: 46px;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-\[\#2E3234\] {
@@ -1479,8 +1705,21 @@ body {
   --tw-text-opacity: 0.7;
 }
 
+.text-opacity-80 {
+  --tw-text-opacity: 0.8;
+}
+
+.text-opacity-50 {
+  --tw-text-opacity: 0.5;
+}
+
 .opacity-75 {
   opacity: 0.75;
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .transition-all {
@@ -1599,6 +1838,16 @@ body {
   transition-duration: 150ms;
 }
 
+@media (max-width: 480px) {
+  .price {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 26px;
+    padding-right: 26px;
+    font-size: 14px;
+  }
+}
+
 .price:hover {
   background-color: #009bfc41;
 }
@@ -1610,6 +1859,13 @@ body {
   padding-right: 2.25rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (max-width: 480px) {
+  .price--cur {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
 }
 
 .price--cur:hover {
@@ -1679,6 +1935,45 @@ body {
   fill: #fff;
 }
 
+input:checked + label {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 157 252 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 157 252 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: #93c5fd;
+  --tw-shadow: var(--tw-shadow-colored);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+input:checked + label:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 157 252 / var(--tw-bg-opacity));
+}
+
+input:checked + label p,
+input:checked + label p span {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+input:checked + label div div p {
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 176 255 / var(--tw-bg-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-text-opacity: 0.8;
+}
+
+input:checked + label div div {
+  border-style: none;
+}
+
 :disabled {
   pointer-events: none;
 }
@@ -1718,6 +2013,16 @@ body {
   70% {
     transform: translateY(-5px);
   }
+}
+
+.placeholder\:text-\[\#2F4D50\]::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(47 77 80 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-\[\#2F4D50\]::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(47 77 80 / var(--tw-text-opacity));
 }
 
 .before\:absolute::before {
@@ -1776,6 +2081,10 @@ body {
   border-color: rgb(0 157 252 / var(--tw-border-opacity));
 }
 
+.hover\:bg-\[\#009bfcc1\]:hover {
+  background-color: #009bfcc1;
+}
+
 .hover\:bg-\[\#243C52\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(36 60 82 / var(--tw-bg-opacity));
@@ -1789,14 +2098,6 @@ body {
 .hover\:bg-lightblue:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 157 252 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#009bfcdf\]:hover {
-  background-color: #009bfcdf;
-}
-
-.hover\:bg-\[\#009bfcc1\]:hover {
-  background-color: #009bfcc1;
 }
 
 .hover\:before\:scale-100:hover::before {
@@ -1825,6 +2126,11 @@ body {
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .md\:mx-5 {
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
   }
 
   .md\:mt-6 {
@@ -1856,6 +2162,10 @@ body {
     max-width: 100%;
   }
 
+  .md\:max-w-\[330px\] {
+    max-width: 330px;
+  }
+
   .md\:flex-col {
     flex-direction: column;
   }
@@ -1866,6 +2176,10 @@ body {
 
   .md\:gap-8 {
     gap: 2rem;
+  }
+
+  .md\:gap-\[26px\] {
+    gap: 26px;
   }
 
   .md\:gap-\[30px\] {
@@ -1922,6 +2236,10 @@ body {
   .md\:text-center {
     text-align: center;
   }
+
+  .md\:leading-\[40px\] {
+    line-height: 40px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -1937,8 +2255,25 @@ body {
     right: -90px;
   }
 
+  .sm\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .sm\:mt-\[30px\] {
+    margin-top: 30px;
+  }
+
   .sm\:mt-\[32px\] {
     margin-top: 32px;
+  }
+
+  .sm\:mt-\[100px\] {
+    margin-top: 100px;
+  }
+
+  .sm\:block {
+    display: block;
   }
 
   .sm\:flex {
@@ -1977,6 +2312,10 @@ body {
     width: 60px;
   }
 
+  .sm\:max-w-full {
+    max-width: 100%;
+  }
+
   .sm\:flex-col {
     flex-direction: column;
   }
@@ -1991,6 +2330,10 @@ body {
 
   .sm\:gap-\[64px\] {
     gap: 64px;
+  }
+
+  .sm\:gap-\[40px\] {
+    gap: 40px;
   }
 
   .sm\:px-5 {
@@ -2013,8 +2356,32 @@ body {
     padding-bottom: 40px;
   }
 
+  .sm\:py-\[64px\] {
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
+
+  .sm\:px-\[25px\] {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .sm\:py-\[29px\] {
+    padding-top: 29px;
+    padding-bottom: 29px;
+  }
+
+  .sm\:px-\[20px\] {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .sm\:pr-0 {
     padding-right: 0px;
+  }
+
+  .sm\:pt-\[162px\] {
+    padding-top: 162px;
   }
 
   .sm\:text-center {
@@ -2029,18 +2396,35 @@ body {
     font-size: 40px;
   }
 
+  .sm\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .sm\:text-\[30px\] {
+    font-size: 30px;
+  }
+
   .sm\:leading-\[42px\] {
     line-height: 42px;
   }
 }
 
 @media (max-width: 480px) {
+  .xs\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .xs\:mb-4 {
     margin-bottom: 1rem;
   }
 
   .xs\:mr-auto {
     margin-right: auto;
+  }
+
+  .xs\:mt-4 {
+    margin-top: 1rem;
   }
 
   .xs\:mt-\[10px\] {
@@ -2051,8 +2435,16 @@ body {
     margin-top: 37px;
   }
 
+  .xs\:ml-0 {
+    margin-left: 0px;
+  }
+
   .xs\:hidden {
     display: none;
+  }
+
+  .xs\:h-\[18px\] {
+    height: 18px;
   }
 
   .xs\:h-\[250px\] {
@@ -2061,6 +2453,10 @@ body {
 
   .xs\:h-\[46px\] {
     height: 46px;
+  }
+
+  .xs\:h-\[4px\] {
+    height: 4px;
   }
 
   .xs\:h-fit {
@@ -2072,12 +2468,28 @@ body {
     width: 114px;
   }
 
+  .xs\:w-\[14px\] {
+    width: 14px;
+  }
+
+  .xs\:w-\[18px\] {
+    width: 18px;
+  }
+
   .xs\:w-\[250px\] {
     width: 250px;
   }
 
   .xs\:w-\[46px\] {
     width: 46px;
+  }
+
+  .xs\:w-\[4px\] {
+    width: 4px;
+  }
+
+  .xs\:w-\[120px\] {
+    width: 120px;
   }
 
   .xs\:max-w-\[370px\] {
@@ -2100,6 +2512,24 @@ body {
     gap: 16px;
   }
 
+  .xs\:gap-\[17px\] {
+    gap: 17px;
+  }
+
+  .xs\:p-4 {
+    padding: 1rem;
+  }
+
+  .xs\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .xs\:px-\[16px\] {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
   .xs\:px-\[8px\] {
     padding-left: 8px;
     padding-right: 8px;
@@ -2115,13 +2545,51 @@ body {
     padding-bottom: 14px;
   }
 
+  .xs\:py-\[16px\] {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+  .xs\:py-\[20px\] {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
   .xs\:py-\[46px\] {
     padding-top: 46px;
     padding-bottom: 46px;
   }
 
+  .xs\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .xs\:pl-\[10px\] {
+    padding-left: 10px;
+  }
+
+  .xs\:pr-\[35px\] {
+    padding-right: 35px;
+  }
+
+  .xs\:pb-\[15px\] {
+    padding-bottom: 15px;
+  }
+
+  .xs\:pb-\[25px\] {
+    padding-bottom: 25px;
+  }
+
   .xs\:text-left {
     text-align: left;
+  }
+
+  .xs\:text-center {
+    text-align: center;
+  }
+
+  .xs\:text-\[10px\] {
+    font-size: 10px;
   }
 
   .xs\:text-\[13px\] {
@@ -2144,8 +2612,24 @@ body {
     font-size: 18px;
   }
 
+  .xs\:text-\[28px\] {
+    font-size: 28px;
+  }
+
   .xs\:text-\[30px\] {
     font-size: 30px;
+  }
+
+  .xs\:text-\[12px\] {
+    font-size: 12px;
+  }
+
+  .xs\:font-medium {
+    font-weight: 500;
+  }
+
+  .xs\:font-semibold {
+    font-weight: 600;
   }
 
   .xs\:leading-6 {
