--- a/puzzle/sass/style.scss
+++ b/puzzle/sass/style.scss
@@ -291,6 +291,7 @@ a {
             width: 81%;
             text-align: center;
             align-items: center;
+            z-index: 20;
             &_title {
                 line-height: 88px;
                 font-size: 88px;
