--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -549,6 +549,10 @@
             font-size: 16px;
             line-height: 24px;
         }
+        &_circle {
+            width: 300px;
+            height: 300px;
+        }
     }
 
     .services {
