--- a/puzzle/css/style.css
+++ b/puzzle/css/style.css
@@ -39,7 +39,7 @@ a {
 #container3D {
   position: sticky;
   width: 100%;
-  height: 100vh;
+  height: 780px;
   overflow: hidden;
   z-index: 5;
   top: 0;
@@ -330,7 +330,7 @@ a {
   border-radius: 50%;
   background-color: var(--background);
   z-index: 10;
-  top: 55%;
+  top: 45%;
   left: 50%;
   transform: translateX(-50%);
 }
