--- a/puzzle/css/style.css
+++ b/puzzle/css/style.css
@@ -40,11 +40,12 @@ a {
   position: sticky;
   width: 100%;
   height: 780px;
+  max-width: 1600px;
   overflow: hidden;
   z-index: 5;
   top: 0;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   pointer-events: none;
 }
 
@@ -1303,6 +1304,14 @@ a {
   display: none;
 }
 
+@media (max-width: 955px) {
+  #container3D {
+    max-height: 100vh;
+    max-width: 100vh;
+    width: 100%;
+    height: 100%;
+  }
+}
 @media (min-width: 1477px) {
   .plans_puzzle {
     top: -151px;
