--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -1,3 +1,12 @@
+@media (max-width: 955px) {
+    #container3D {
+        max-height: 100vh;
+        max-width: 100vh;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 @media (min-width: 1477px) {
     .plans {
         &_puzzle {
