--- a/puzzle/sass/style.scss
+++ b/puzzle/sass/style.scss
@@ -40,11 +40,12 @@ a {
     position: sticky;
     width: 100%;
     height: 780px;
+    max-width: 1600px;
     overflow: hidden;
     z-index: 5;
     top: 0;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     pointer-events: none;
 }
 
