--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -1,9 +1,9 @@
 @media (max-width: 955px) {
     #container3D {
-        max-height: 100vh;
-        max-width: 100vh;
-        width: 100%;
-        height: 100%;
+        // max-height: 100vh;
+        // max-width: 100vh;
+        // width: 100%;
+        // height: 100%;
     }
 }
 
@@ -48,7 +48,7 @@
     }
 
     .header {
-        background-image: url('../images/bg_middle_header.png');
+        // background-image: url('../images/bg_middle_header.png');
         .container {
             .nav {
                 &_menu {
@@ -314,7 +314,7 @@
         line-height: 44.8px;
     }
     .header {
-        background-image: url('../images/bg_mobile_header.png');
+        background-image: url('../images/mobile-clear-bg.png');
         .container {
             .nav {
                 &_menu {
@@ -558,9 +558,15 @@
             font-size: 16px;
             line-height: 24px;
         }
+        &__title-wrapper {
+            margin-bottom: 120px;
+        }
         &_circle {
             width: 300px;
             height: 300px;
+            &::before {
+                top: 20%;
+            }
         }
     }
 
@@ -673,6 +679,16 @@
         .contantUsSvg {
             min-width: 32px;
             min-height: 32px;
+        }
+    }
+    .about-us {
+        &_circle {
+            &::before {
+                top: 35%;
+            }
+        }
+        &__title-wrapper {
+            margin-bottom: 10px;
         }
     }
 }
