--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -46,19 +46,18 @@
         font-size: 32px;
         line-height: 44.8px;
     }
-
+    .nav {
+        &_menu {
+            margin-right: 0;
+            gap: 32px;
+        }
+        .container {
+            width: 95%;
+        }
+    }
     .header {
         // background-image: url('../images/bg_middle_header.png');
         .container {
-            .nav {
-                &_menu {
-                    margin-right: 0;
-                    gap: 32px;
-                }
-                .container {
-                    width: 95%;
-                }
-            }
             .wrap {
                 &_title {
                     font-size: 64px;
@@ -213,13 +212,9 @@
 }
 
 @media (max-width: 992px) {
-    .header {
-        .container {
-            .nav {
-                &_menu {
-                    gap: 20px;
-                }
-            }
+    .nav {
+        &_menu {
+            gap: 20px;
         }
     }
 
@@ -313,14 +308,14 @@
         font-size: 32px;
         line-height: 44.8px;
     }
+    .nav {
+        &_menu {
+            display: none;
+        }
+    }
     .header {
         background-image: url('../images/mobile-clear-bg.png');
         .container {
-            .nav {
-                &_menu {
-                    display: none;
-                }
-            }
             .wrap {
                 &_title {
                     font-size: 42px;
@@ -439,106 +434,105 @@
         font-size: 24px;
         line-height: 33.6px;
     }
+    .nav {
+        &-scrolled-btn {
+            display: none;
+        }
+        &-mobile {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 780px;
+            padding-bottom: 40px;
+            padding-top: 16px;
+            .container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+                gap: 40px;
+                height: 100vh;
+                padding-top: 16px;
+            }
+        }
+        &_logo {
+            width: 140px;
+            height: 26px;
+        }
+        &_menu {
+            display: none;
+        }
+        &_list {
+            &-mobile {
+                display: flex;
+                flex-direction: column;
+                gap: 40px;
+                margin-top: 16px;
+                list-style-type: none;
+                text-align: center;
+                a {
+                    text-decoration: none;
+                    color: var(--white);
+                }
+            }
+        }
+        &_btn {
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+            color: var(--black);
+            text-decoration: none;
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 700;
+            padding: 16px 32px;
+            background-color: var(--white);
+            border-radius: 100px;
+            &-active {
+                display: block;
+            }
+        }
+        &-wrapper {
+            display: flex;
+            align-items: center;
+            gap: 28px;
+        }
+        .hamburger {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            span {
+                display: block;
+                width: 17.5px;
+                height: 1.5px;
+                background-color: var(--white);
+                margin: 4px 0;
+                border-radius: 2px;
+                &:nth-child(1) {
+                    margin-bottom: 5px;
+                }
+            }
+            &-active {
+                span {
+                    transition: transform 0.25s ease-in-out;
+                    &:nth-child(1) {
+                        transform: rotate(-45deg);
+                        margin-bottom: -5.5px;
+                    }
+                    &:nth-child(2) {
+                        transform: rotate(45deg);
+                        margin-bottom: 4px;
+                    }
+                }
+            }
+        }
+    }
     .header {
         .container {
             padding: 0 24px;
             width: 100%;
-            .nav {
-                &-scrolled-btn {
-                    display: none;
-                }
-                &-mobile {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    height: 780px;
-                    padding-bottom: 40px;
-                    padding-top: 16px;
-                    .container {
-                        &-mobile {
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            justify-content: space-between;
-                            gap: 40px;
-                            height: 100vh;
-                            padding-top: 16px;
-                        }
-                    }
-                }
-                &_logo {
-                    width: 140px;
-                    height: 26px;
-                }
-                &_menu {
-                    display: none;
-                }
-                &_list {
-                    &-mobile {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 40px;
-                        margin-top: 16px;
-                        list-style-type: none;
-                        text-align: center;
-                        a {
-                            text-decoration: none;
-                            color: var(--white);
-                        }
-                    }
-                }
-                &_btn {
-                    width: 100%;
-                    margin: 0 auto;
-                    text-align: center;
-                    color: var(--black);
-                    text-decoration: none;
-                    font-size: 16px;
-                    line-height: 20px;
-                    font-weight: 700;
-                    padding: 16px 32px;
-                    background-color: var(--white);
-                    border-radius: 100px;
-                    &-active {
-                        display: block;
-                    }
-                }
-                &-wrapper {
-                    display: flex;
-                    align-items: center;
-                    gap: 28px;
-                }
-                .hamburger {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    span {
-                        display: block;
-                        width: 17.5px;
-                        height: 1.5px;
-                        background-color: var(--white);
-                        margin: 4px 0;
-                        border-radius: 2px;
-                        &:nth-child(1) {
-                            margin-bottom: 5px;
-                        }
-                    }
-                    &-active {
-                        span {
-                            transition: transform 0.25s ease-in-out;
-                            &:nth-child(1) {
-                                transform: rotate(-45deg);
-                                margin-bottom: -5.5px;
-                            }
-                            &:nth-child(2) {
-                                transform: rotate(45deg);
-                                margin-bottom: 4px;
-                            }
-                        }
-                    }
-                }
-            }
+
             .wrap {
                 width: 100%;
                 &_title {
@@ -668,13 +662,24 @@
     }
 }
 
+@media (max-width: 500px) {
+    .main-btn {
+        span {
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 20.8px;
+            padding: 14px 30px;
+        }
+    }
+}
+
 @media (max-width: 400px) {
     .main-btn {
         span {
             font-size: 16px;
             font-weight: 700;
             line-height: 20.8px;
-            padding: 14px 60px;
+            padding: 14px 30px;
         }
         .contantUsSvg {
             min-width: 32px;
@@ -689,6 +694,28 @@
         }
         &__title-wrapper {
             margin-bottom: 10px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    #back-to-top {
+        padding: 16px;
+        svg {
+            width: 18px;
+            height: 18px;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    #back-to-top {
+        padding: 12px;
+        right: 10px;
+        bottom: 10px;
+        svg {
+            width: 16px;
+            height: 16px;
         }
     }
 }
