--- a/puzzle/css/style.css
+++ b/puzzle/css/style.css
@@ -797,18 +797,13 @@ a {
 .benefits-mobile {
   padding: 100px 0 259px 120px;
   position: relative;
-  overflow: hidden;
 }
 .benefits-mobile-wrapper {
-  height: 250px;
-  overflow: scroll;
   display: flex;
-  flex-direction: column;
-  gap: 120px;
   margin-top: 102px;
 }
-.benefits-mobile-wrapper::-webkit-scrollbar {
-  display: none;
+.benefits-mobile_item {
+  padding: 0 50px;
 }
 .benefits-mobile_title {
   font-size: 32px;
@@ -1559,7 +1554,6 @@ a {
     flex-direction: row;
     height: 270px;
     width: 100vw;
-    overflow-x: auto;
     padding: 0 24px;
     margin-top: 32px;
     z-index: 19;
@@ -1583,12 +1577,29 @@ a {
     z-index: 19;
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 10px;
     margin: 0 auto;
     margin-top: 24px;
     margin-bottom: 320px;
     height: 16px;
     width: 112px;
+  }
+  .benefits-mobile-dots span {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+  }
+  .benefits-mobile-dots span:nth-child(1) {
+    background: linear-gradient(318.05deg, #ff4980 5.42%, #ff82a7 92.49%);
+  }
+  .benefits-mobile-dots span:nth-child(2) {
+    background: linear-gradient(322.64deg, #ff9548 4.94%, #ffbc8b 85.48%);
+  }
+  .benefits-mobile-dots span:nth-child(3) {
+    background: linear-gradient(140.09deg, #94ffd5 8.95%, #66f6bd 51.57%, #44f0ac 94.21%);
+  }
+  .benefits-mobile-dots span:nth-child(4) {
+    background: linear-gradient(112.33deg, #76bdff -45.13%, #0c84f2 165.33%);
   }
   .benefits-mobile-dot {
     width: 16px;
@@ -1602,6 +1613,7 @@ a {
     right: 50%;
     transform: translate(50%, -50%) rotate(88deg);
     transform-origin: center center;
+    transition: 0.6s;
   }
 }
 @media (max-width: 1024px) {
