--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -157,7 +157,7 @@
                 flex-direction: row;
                 height: 270px;
                 width: 100vw;
-                overflow-x: auto;
+                // overflow-x: auto;
                 padding: 0 24px;
                 margin-top: 32px;
                 z-index: 19;
@@ -181,12 +181,46 @@
                 z-index: 19;
                 display: flex;
                 justify-content: center;
-                gap: 16px;
+                gap: 10px;
                 margin: 0 auto;
                 margin-top: 24px;
                 margin-bottom: 320px;
                 height: 16px;
                 width: 112px;
+                span {
+                    width: 16px;
+                    height: 16px;
+                    border-radius: 50%;
+                }
+                span:nth-child(1) {
+                    background: linear-gradient(
+                        318.05deg,
+                        #ff4980 5.42%,
+                        #ff82a7 92.49%
+                    );
+                }
+                span:nth-child(2) {
+                    background: linear-gradient(
+                        322.64deg,
+                        #ff9548 4.94%,
+                        #ffbc8b 85.48%
+                    );
+                }
+                span:nth-child(3) {
+                    background: linear-gradient(
+                        140.09deg,
+                        #94ffd5 8.95%,
+                        #66f6bd 51.57%,
+                        #44f0ac 94.21%
+                    );
+                }
+                span:nth-child(4) {
+                    background: linear-gradient(
+                        112.33deg,
+                        #76bdff -45.13%,
+                        #0c84f2 165.33%
+                    );
+                }
             }
             &-dot {
                 width: 16px;
@@ -200,6 +234,7 @@
                 right: 50%;
                 transform: translate(50%, -50%) rotate(88deg);
                 transform-origin: center center;
+                transition: 0.6s;
             }
         }
     }
