--- a/puzzle/css/style.css
+++ b/puzzle/css/style.css
@@ -1499,6 +1499,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 24px;
   height: 100%;
 }
 .portfolio__title {
@@ -1605,9 +1606,55 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
+  bottom: 0;
   right: 0;
-  z-index: -1;
+  z-index: 2;
+}
+.portfolio .work_bottom_4 {
+  max-width: 600px;
+  right: -50px;
+  bottom: -80px;
+}
+.portfolio .work_top_4 {
+  max-width: 650px;
+  right: -150px;
+  top: -60px;
+}
+.portfolio .work_bottom_5 {
+  right: 50px;
+  bottom: -100px;
+}
+.portfolio .work_top_5 {
+  top: 0;
+  max-width: 520px;
+}
+.portfolio .work_bottom_6 {
+  bottom: -350px;
+  max-width: 580px;
+  right: -10px;
+  z-index: 3;
+}
+.portfolio .work_top_7 {
+  top: 30px;
+}
+.portfolio .work_top_8 {
+  top: 0;
+}
+.portfolio .work_bottom_8 {
+  max-width: 500px;
+  bottom: -300px;
+  right: 50px;
+  z-index: 3;
+}
+.portfolio .work_bottom_9 {
+  max-width: 500px;
+  bottom: -220px;
+  right: 50px;
+  z-index: 3;
+}
+.portfolio .work-top-9 {
+  max-width: 480px;
+  right: 20px;
 }
 
 .centered {
@@ -2305,6 +2352,8 @@ a {
   .portfolio__group {
     position: absolute;
     width: 100%;
+    height: 440px;
+    bottom: 0;
   }
   .portfolio .work-bottom {
     bottom: 0;
@@ -2343,10 +2392,37 @@ a {
     width: 100%;
     height: 70%;
     bottom: 0;
+    left: 0;
   }
   .portfolio .swiper-button-next,
   .portfolio .swiper-button-prev {
     display: none;
+  }
+  .portfolio .work_bottom_6 {
+    bottom: 0;
+    max-width: 80%;
+    right: 0;
+  }
+  .portfolio .work_top_7 {
+    max-width: 100%;
+    top: 0;
+    right: 0;
+  }
+  .portfolio .work_top_8 {
+    bottom: 0;
+    right: -40px;
+  }
+  .portfolio .work_bottom_8 {
+    top: -50px;
+    left: 30px;
+    z-index: 3;
+    max-width: 80%;
+  }
+  .portfolio .work_bottom_9 {
+    top: -50px;
+    left: 30px;
+    z-index: 3;
+    max-width: 80%;
   }
 }
 @media (max-width: 700px) {
@@ -2367,17 +2443,17 @@ a {
     gap: 20px;
   }
   .portfolio .work-bottom {
-    bottom: 0;
+    bottom: 30%;
     right: 50px;
     left: 20px;
     z-index: 2;
-    max-width: 70%;
+    max-width: 80%;
   }
   .portfolio .work-top {
     right: 10px;
     z-index: 1;
-    top: 55%;
-    max-width: 70%;
+    top: 25%;
+    max-width: 80%;
   }
   .portfolio .long_img-top {
     width: 130%;
@@ -2403,8 +2479,9 @@ a {
     display: block;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 80%;
     bottom: 0;
+    left: 0;
   }
   .portfolio__title {
     font-size: 24px;
@@ -2447,5 +2524,68 @@ a {
   .portfolio .portfolio-pagination span {
     width: 12px;
     height: 12px;
+  }
+  .portfolio .work_mobile_top_3 {
+    right: 40%;
+  }
+  .portfolio .work_mobile_bottom_3 {
+    width: 140%;
+    right: -50%;
+  }
+  .portfolio .work_bottom_4 {
+    max-width: 100%;
+    right: 0;
+    bottom: 50px;
+  }
+  .portfolio .work_top_4 {
+    max-width: 100%;
+    right: 0;
+    top: 0;
+  }
+  .portfolio .work_bottom_5 {
+    right: 50px;
+    bottom: 200px;
+    max-width: 90%;
+    right: 0;
+  }
+  .portfolio .work_top_5 {
+    top: 150px;
+    max-width: 120%;
+    right: 30%;
+  }
+  .portfolio .work_bottom_6 {
+    top: 20px;
+    max-width: 90%;
+    left: 0;
+    z-index: 4;
+  }
+  .portfolio .work_top_6 {
+    width: 100%;
+    bottom: 20px;
+    right: -20px;
+  }
+  .portfolio .work_top_7 {
+    max-width: 100%;
+    top: 10px;
+    right: 0;
+    z-index: 3;
+  }
+  .portfolio .work_bottom_7 {
+    width: 150%;
+    right: -60%;
+  }
+  .portfolio .work_top_8 {
+    top: 30%;
+    right: -40px;
+    max-width: 80%;
+  }
+  .portfolio .work_bottom_8 {
+    top: 20px;
+    left: 30px;
+    z-index: 3;
+    max-width: 80%;
+  }
+  .portfolio .work_bottom_9 {
+    max-width: 90%;
   }
 }/*# sourceMappingURL=style.css.map */
