--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -850,6 +850,8 @@
         &__group {
             position: absolute;
             width: 100%;
+            height: 440px;
+            bottom: 0;
         }
         .work-bottom {
             bottom: 0;
@@ -888,10 +890,37 @@
             width: 100%;
             height: 70%;
             bottom: 0;
+            left: 0;
         }
         .swiper-button-next,
         .swiper-button-prev {
             display: none;
+        }
+        .work_bottom_6 {
+            bottom: 0;
+            max-width: 80%;
+            right: 0;
+        }
+        .work_top_7 {
+            max-width: 100%;
+            top: 0;
+            right: 0;
+        }
+        .work_top_8 {
+            bottom: 0;
+            right: -40px;
+        }
+        .work_bottom_8 {
+            top: -50px;
+            left: 30px;
+            z-index: 3;
+            max-width: 80%;
+        }
+        .work_bottom_9 {
+            top: -50px;
+            left: 30px;
+            z-index: 3;
+            max-width: 80%;
         }
     }
 }
@@ -915,17 +944,17 @@
             gap: 20px;
         }
         .work-bottom {
-            bottom: 0;
+            bottom: 30%;
             right: 50px;
             left: 20px;
             z-index: 2;
-            max-width: 70%;
+            max-width: 80%;
         }
         .work-top {
             right: 10px;
             z-index: 1;
-            top: 55%;
-            max-width: 70%;
+            top: 25%;
+            max-width: 80%;
         }
         .long_img-top {
             width: 130%;
@@ -951,8 +980,9 @@
             display: block;
             position: absolute;
             width: 100%;
-            height: 100%;
+            height: 80%;
             bottom: 0;
+            left: 0;
         }
         &__title {
             font-size: 24px;
@@ -995,6 +1025,69 @@
                 width: 12px;
                 height: 12px;
             }
+        }
+        .work_mobile_top_3 {
+            right: 40%;
+        }
+        .work_mobile_bottom_3 {
+            width: 140%;
+            right: -50%;
+        }
+        .work_bottom_4 {
+            max-width: 100%;
+            right: 0;
+            bottom: 50px;
+        }
+        .work_top_4 {
+            max-width: 100%;
+            right: 0;
+            top: 0;
+        }
+        .work_bottom_5 {
+            right: 50px;
+            bottom: 200px;
+            max-width: 90%;
+            right: 0;
+        }
+        .work_top_5 {
+            top: 150px;
+            max-width: 120%;
+            right: 30%;
+        }
+        .work_bottom_6 {
+            top: 20px;
+            max-width: 90%;
+            left: 0;
+            z-index: 4;
+        }
+        .work_top_6 {
+            width: 100%;
+            bottom: 20px;
+            right: -20px;
+        }
+        .work_top_7 {
+            max-width: 100%;
+            top: 10px;
+            right: 0;
+            z-index: 3;
+        }
+        .work_bottom_7 {
+            width: 150%;
+            right: -60%;
+        }
+        .work_top_8 {
+            top: 30%;
+            right: -40px;
+            max-width: 80%;
+        }
+        .work_bottom_8 {
+            top: 20px;
+            left: 30px;
+            z-index: 3;
+            max-width: 80%;
+        }
+        .work_bottom_9 {
+            max-width: 90%;
         }
     }
 }
